# bizclaw

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CREDITS.md  Cargo.toml  Dockerfile  Dockerfile.standalone  LICENSE  README.md  THIRD_PARTY_NOTICES.md  config.quickstart.toml  docker-compose.prod.yml  docker-compose.standalone.yml  docker-compose.yml  install.sh  run-local.sh  test.kts  typescript
.cargo/: audit.toml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-desktop.yml
_agents/workflows/: watchdog.md
android/: .gitignore  README.md  build-apk.sh  build.gradle.kts  gradle.properties  settings.gradle.kts  setup_llama_cpp.sh
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  GGUFReader.cpp  LLMInference.cpp  LLMInference.h  bizclaw_llm_jni.cpp
crates/bizclaw-agent/: Cargo.toml
crates/bizclaw-agent/data/: db-examples.sqlite
crates/bizclaw-agent/src/: circuit_breaker.rs  context.rs  discovery.rs  engine.rs  lib.rs  loop_detector.rs  model_router.rs  orchestrator.rs  proactive.rs  progress.rs
crates/bizclaw-brain/: Cargo.toml
crates/bizclaw-brain/src/: attention.rs  forward.rs  grammar.rs  kv_cache.rs  lib.rs  llamacpp.rs  mmap.rs  model.rs  quant.rs  rope.rs  sampler.rs  tensor.rs  thread_pool.rs  tokenizer.rs
crates/bizclaw-brain/src/simd/: avx2.rs  mod.rs  neon.rs  sse2.rs
crates/bizclaw-channels/: Cargo.toml
crates/bizclaw-channels/src/: adapters.rs  cli.rs  discord.rs  email.rs  lib.rs  slack.rs  telegram.rs  tts.rs  webhook.rs  whatsapp.rs  xiaozhi.rs
crates/bizclaw-core/: Cargo.toml
crates/bizclaw-core/src/: circuit_breaker.rs  config.rs  error.rs  lib.rs  utils.rs
crates/bizclaw-core/src/traits/: channel.rs  identity.rs  memory.rs  mod.rs  observer.rs  provider.rs  runtime.rs  security.rs  tool.rs  tunnel.rs
crates/bizclaw-core/src/types/: message.rs  mod.rs  model.rs  orchestration.rs  tool_call.rs
crates/bizclaw-db/: Cargo.toml
crates/bizclaw-db/src/: lib.rs  postgres.rs  sqlite.rs  store.rs
crates/bizclaw-ffi/src/: lib.rs
crates/bizclaw-gateway/: Cargo.toml
crates/bizclaw-hands/: Cargo.toml
crates/bizclaw-hands/src/: guardrails.rs  hand.rs  lib.rs  manifest.rs  registry.rs  runner.rs
crates/bizclaw-knowledge/: Cargo.toml
crates/bizclaw-knowledge/src/: chunker.rs  docx.rs  embeddings.rs  lib.rs  mcp_server.rs  multi_embed.rs  nudges.rs  pdf.rs  search.rs  signals.rs  store.rs  vector_store.rs  watcher.rs
crates/bizclaw-mcp/: Cargo.toml
crates/bizclaw-mcp/src/: bridge.rs  lib.rs  sse_http.rs  transport.rs  types.rs
crates/bizclaw-memory/: Cargo.toml
crates/bizclaw-memory/src/: brain.rs  lib.rs  noop.rs  sqlite.rs  vector.rs
crates/bizclaw-orchestrator/: Cargo.toml
crates/bizclaw-orchestrator/src/: budget.rs  heartbeat.rs  lib.rs  team.rs  team_loader.rs  ticket.rs
crates/bizclaw-platform/: Cargo.toml
crates/bizclaw-providers/: Cargo.toml
crates/bizclaw-providers/src/: brain.rs  failover.rs  openai_compatible.rs  provider_registry.rs
crates/bizclaw-runtime/: Cargo.toml
crates/bizclaw-runtime/src/: lib.rs  native.rs
crates/bizclaw-security/: Cargo.toml
crates/bizclaw-security/src/: allowlist.rs  approval.rs  injection.rs  lib.rs  sandbox.rs  secrets.rs  vault.rs
crates/bizclaw-skills/: Cargo.toml
crates/bizclaw-skills/src/: builtin.rs  lib.rs  marketplace.rs  parser.rs  registry.rs
crates/bizclaw-skills/src/skills/: api_designer.md  content_writer.md  devops_engineer.md  git_workflow.md  python_analyst.md  rust_expert.md  security_auditor.md  sql_expert.md  vietnamese_business.md  web_developer.md
crates/bizclaw-tools/: Cargo.toml
crates/bizclaw-tools/src/: api_connector.rs  browser.rs  byterover.rs  calendar.rs  config_manager.rs  custom_tool.rs  db_connection.rs  db_examples.rs  db_query.rs  db_safety.rs  db_schema.rs  db_semantic.rs  document_reader.rs  edit_file.rs  file.rs  glob_find.rs  grep_search.rs  group_summarizer.rs  http_request.rs  lib.rs  memory_search.rs  nl_query.rs  orchestration.rs  plan_store.rs  plan_tool.rs  registry.rs  session_context.rs  shell.rs  zalo_tool.rs
crates/bizclaw-workflows/: Cargo.toml
crates/bizclaw-workflows/src/: engine.rs  lib.rs  state.rs  step.rs  templates.rs
data/: api-endpoints.json  db-connections.json  demo_shop.db  industry-templates.json  mcp-servers-catalog.json  pixel_office.html  scheduled-reports.json
data/agent-team/: optout.json  scheduler.json  team.json
deploy/viagent-landing/: docs.html  index.html
docs/api/: endpoints.md
docs/architecture/: system-overview.md  system_overview.md
docs/business/: rules.md
docs/database/: schema.md
landing/: docs.html  index.html
migrations/: 001_init.sql  002_enterprise.sql  003_mission_control.sql  004_server_provisioner.sql
scripts/: install.sh
src/: desktop_main.rs  main.rs  platform_main.rs
training/: README.md
training/01-mindset/: module-01-ai-agent-overview.md  module-02-architecture.md  module-03-prompt-context.md  module-04-problem-solving.md
training/02-skillset/: module-05-memory-systems.md  module-06-rag.md  module-07-tool-design.md  module-08-mcp.md  module-09-multi-agent-1.md  module-10-multi-agent-2.md  module-11-llm-integration.md  module-12-cost-optimization.md
training/03-toolset/: module-13-installation.md  module-14-dashboard.md  module-15-channels.md  module-16-channels-advanced.md  module-17-agent-templates.md  module-18-knowledge-brain.md  module-19-multi-tenant.md  module-20-deployment.md
training/04-capstone/: module-21-capstone-design.md  module-22-capstone-implement.md  module-23-capstone-qa.md  module-24-capstone-demo.md
training/exercises/: exercises.md
training/resources/: assessment-rubric.md  bizclaw-architecture-map.md  glossary.md
training/trainer-guide/: README.md  cheatsheet.md  customer-workshop-template.md  demo-script.md  faq-troubleshoot.md  session-1-pitch.md  session-2-installation.md  session-3-agent-creation.md  session-4-channels-rag.md  session-5-multi-agent.md  session-6-demo-toolkit.md
(+135 files in other folders)
