[package]
name = "bizclaw-brain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local LLM inference engine - PicoLM rewrite in Rust"

[dependencies]
bizclaw-core.workspace = true
memmap2.workspace = true
rayon.workspace = true
half.workspace = true
byteorder.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
rand.workspace = true
