[package]
name = "bizclaw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits, types, and configuration for BizClaw"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
tokio-stream.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
shellexpand.workspace = true
