[package]
name = "bizclaw-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Database abstraction layer — SQLite + PostgreSQL backends"

[dependencies]
bizclaw-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true

# PostgreSQL (optional, for managed mode)
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid", "migrate"], optional = true }

[features]
default = ["sqlite"]
sqlite = []
postgres = ["dep:sqlx"]
