[package]
name = "bizclaw-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory and persistence backends for BizClaw"

[dependencies]
bizclaw-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.25.0"
