[package]
name = "bizclaw-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent orchestration — team hierarchy, token budgets, heartbeat monitoring, ticket system (Paperclip-inspired)"

[dependencies]
bizclaw-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
