[package]
name = "bizclaw-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider implementations for BizClaw"

[dependencies]
bizclaw-core.workspace = true
bizclaw-brain.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
