[package]
name = "bizclaw-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool execution system for BizClaw agent"

[dependencies]
bizclaw-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
chrono.workspace = true
urlencoding = "2"
pdf-extract = "0.10.0"
zip = "8.1.0"
calamine = "0.33.0"
regex = "1.12.3"
uuid = { version = "1", features = ["v4"] }
rusqlite.workspace = true
dirs.workspace = true
bizclaw-db.workspace = true
