[package]
name = "bizclaw-workflows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Workflow engine — Sequential, FanOut, Collect, Conditional, Loop orchestration"

[dependencies]
bizclaw-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
